# lambda-calculus

./: flake.nix  fourmolu.yaml  hie.yaml  lambda-calculus.cabal  scripts.nix
lambda-calculus/LambdaCalculus/Lib/: Validation.hs
lambda-calculus/LambdaCalculus/SimplyTyped/: BiDiExpr.hs  Expr.hs
lambda-calculus/LambdaCalculus/Typed/: BiDiExpr.hs  Expr.hs
lambda-calculus/LambdaCalculus/Untyped/: Alpha.hs  Beta.hs  Expr.hs  Printers.hs  Subterms.hs
nameless-shifted-test/: Main.hs
nameless-shifted-test/Shifted/: Generators.hs  NamelessSpec.hs  PrimitiveSpec.hs
nameless-shifted-test/Shifted/Operation/: IndexSpec.hs  LevelSpec.hs
nameless-shifted-test/Test/: Utils.hs
nameless-shifted/Example/: Expr.hs
nameless-shifted/Shifted/: Binder.hs  Nameless.hs  Primitive.hs  Var.hs
nameless-shifted/Shifted/Operation/: Index.hs  Level.hs
src/LambdaCalculus/: Expr.hs
src/LambdaCalculus/Typed/: BiDiExpr.hs  Expr.hs
src/LambdaCalculus/Untyped/: Alpha.hs  Beta.hs  Expr.hs  Printers.hs  Subterms.hs  Vars.hs
test/: Main.hs
test/LambdaCalculus/: ExprSpec.hs  SimplyTypedSpec.hs  UntypedSpec.hs
