cabal-version: 3.4
name:          lambda-calculus
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  build-depends:
    , base
    , containers
    , dlist
    , mtl
    , recursion-schemes
    , text
    , transformers
    , validation

  default-language: Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand src
  exposed-modules: LambdaCalculus.Expr
  hs-source-dirs:  src

executable lambda-calculus
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  lambda-calculus

test-suite lambda-calculus-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    LambdaCalculus.ExprSpec
    Spec

  build-depends:
    , hedgehog
    , HUnit
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , lambda-calculus
