cabal-version: 3.4
name:          lambda-calculus
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    BlockArguments
    DeriveFoldable
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  build-depends:
    , base
    , containers
    , dlist
    , mtl
    , recursion-schemes
    , text
    , transformers
    , validation

  default-language:   Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand src
  exposed-modules:
    LambdaCalculus.Lib.Validation
    LambdaCalculus.Untyped.Alpha
    LambdaCalculus.Untyped.Beta
    LambdaCalculus.Untyped.Expr
    LambdaCalculus.Untyped.Printers
    LambdaCalculus.Untyped.Subterms
    LambdaCalculus.Untyped.Vars

  hs-source-dirs:  src

executable lambda-calculus
  import:         common-opts
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  lambda-calculus

test-suite lambda-calculus-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    LambdaCalculus.UntypedSpec
    Spec
    Test.Utils

  build-depends:
    , hedgehog
    , hspec
    , hspec-api
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , lambda-calculus
