cabal-version: 3.4
name:          lambda-calculus
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    BlockArguments
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

  build-depends:
    , base
    , containers
    , mtl
    , recursion-schemes
    , text
    , transformers
    , validation
    , unicode-show

  default-language:   Haskell2010

library
  import:          common-opts

  -- cabal-fmt: expand lambda-calculus
  exposed-modules:
    LambdaCalculus.Lib.Validation
    LambdaCalculus.SimplyTyped.BiDiExpr
    LambdaCalculus.SimplyTyped.Expr
    LambdaCalculus.Untyped.Expr
    LambdaCalculus.Untyped.Printers
    LambdaCalculus.Untyped.Subterms

  build-depends:
    , dlist
    , lambda-calculus:nameless-shifted

  hs-source-dirs:  lambda-calculus

library nameless-shifted
  import:          common-opts

  -- cabal-fmt: expand nameless-shifted
  exposed-modules:
    Example.Expr
    Shifted.Nameless
    Shifted.Operation.Index
    Shifted.Operation.Level
    Shifted.Var

  hs-source-dirs:  nameless-shifted

test-suite nameless-shifted-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: nameless-shifted-test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand nameless-shifted-test -Main
  other-modules:
    Shifted.Generators
    Shifted.NamelessSpec
    Shifted.Operation.IndexSpec
    Shifted.Operation.LevelSpec
    Spec
    Test.Utils

  build-depends:
    , hedgehog
    , hspec
    , hspec-api
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , lambda-calculus:nameless-shifted

test-suite lambda-calculus-tests
  import:         common-opts
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    LambdaCalculus.SimplyTypedSpec
    LambdaCalculus.UntypedSpec
    Spec
    Test.Utils

  build-depends:
    , hedgehog
    , hspec
    , hspec-api
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
    , HUnit
    , lambda-calculus
    , lambda-calculus:nameless-shifted
